# TVP-OTland

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
data/scripts/creaturescripts/: login.lua
src/: account.h  actions.cpp  actions.h  ban.cpp  ban.h  bed.cpp  bed.h  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  cylinder.cpp  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasemanager.h  databasetasks.cpp  databasetasks.h  definitions.h  depotlocker.cpp  depotlocker.h  enums.h  events.cpp  events.h  fileloader.cpp  fileloader.h  (+107 more)
vc17/: The Violet Project.sln  settings.props  thevioletproject.rc  thevioletproject.vcxproj
